# rust-android-examples

./: .gitignore
.github/workflows/: android_64_release.yml  cerbero.yml  ci-agdk-eframe.yml  docker_gst_android_64_release.yml  gst_android_64_release.yml  upload_to_tg.yml
agdk-eframe/: Cargo.toml  README.md  add_srt.md  build_and_copy.sh  build_and_copy_apk.sh  build_rs  codecs.md  curl.sh  flake.nix  fs_rust.md  gradle.properties  how_debug_gst_rust.md  how_debug_video.md  other_futures.md
agdk-eframe/app/: build.gradle
agdk-eframe/app/src/main/: AndroidManifest.xml
agdk-eframe/app/src/main/java/co/realfit/agdkeframe/: MainActivity.java
agdk-eframe/app/src/main/res/values/: themes.xml
agdk-eframe/app/src/main/res/values-night/: themes.xml
agdk-eframe/cross_meson_gstd/: Readme.md  android_arm64_api28.txt
agdk-eframe/docs/: build rust apps.md
agdk-eframe/docs/cross_meson_gstd/: Readme.md
agdk-eframe/docs/remote/: README.md
agdk-eframe/src/: build.rs  lib.rs  main.rs  shared.rs  utils.rs
agdk-eframe/src/common/: Cargo.toml  controller.rs
agdk-eframe/src/fallbackswitch/: Cargo.toml  mod.rs
agdk-eframe/src/fallbackswitch/fallbacksrc/: imp.rs
agdk-eframe/src/gateway/: config.rs  controller.rs  mod.rs  server.rs
agdk-eframe/src/nodes/: destination.rs  mixer.rs  mod.rs  node.md  node.rs  source.rs  srt.rs  video_generator.rs
agdk-eframe/src/utils/: mod.rs  pipeline_manager.rs  schedulable.rs  stream_producer.rs
agdk-eframe/ui/: button_native.slint  todo.slint
app/: txt.txt
docker/: docker-compose.yml
gstreamer-android/: Application.mk  build_gst_so.sh  cross.md  fix_unwind.a.md  howbuild.md
gstreamer-android/faac-aarch64-linux-1.30-so/lib/: libfaac.la  libfaac.so.0.0.0
gstreamer-android/jni/: Android.mk  Android_delta.mk  Android_template.mk
gstreamer-android/jni/arm64-v8a/: libgstfallbackswitch.la
scripts/: crossfade.py
scripts_test_api/: crossfade.py  how_test.md  node.py
