[package]
name = "agdk-eframe"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# openssl = { version = "0.10", features = ["vendored"] }
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.11"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6"
serde_json = "1.0"

log = "0.4"
# glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gst = { version = "0.21.2", package = "gstreamer", default-features = false }
anyhow = "1.0"
derive_more = "0.99.5"
# winit = { version = "0.29.3", features = [ "android-game-activity" ] }
# egui-winit = { version = "0.23", features = [ "android-game-activity" ] }
# wgpu = "0.17.1"
pollster = "0.2"
# egui = "0.23"
# eframe = { version = "0.23", features = [ "wgpu", "android-game-activity"] }
# egui_demo_lib = "0.23"
slint = { version = "1.3.0" }
i-slint-backend-android-activity = { version = "=1.3.0", features = ["game-activity"] }

[build-dependencies]
slint-build ={  version = "1.3.0" }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"
jni = { version = "0.5", default-features = false }
gst = { version = "0.21.2", package = "gstreamer", default-features = false }
log = { version = "0.4.18", default-features = false }

[lib]
path = "src/main.rs"
name="agdk_eframe"
crate_type=["cdylib"]

[package.metadata.android]
package = "com.myapp"
apk_name = "myapp"

[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"
# max_sdk_version = 18
# The target Android API level.
target_sdk_version = 30
min_sdk_version = 21

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.application]
label = "MyApp"

build_targets = [ "aarch64-linux-android" ]

# See: https://developer.android.com/guide/topics/manifest/activity-element#screen
orientation = "portrait"

runtime_libs = "/home/alex/Документы/android/media/examples/android/libgstreamer_android_gen/out/Gstreamer-1.22.5/lib"

