[package]
name = "agdk-eframe"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# for gstreamer
# libunwind = "1.3.3"
libffi = "3.2.0"
log = "0.4"
# winit = { version = "0.29.3", features = [ "android-game-activity" ] }
egui-winit = { version = "0.23", features = [ "android-game-activity" ] }
wgpu = "0.17.1"
pollster = "0.2"
egui = "0.23"
eframe = { version = "0.23", features = [ "wgpu", "android-game-activity"] }
egui_demo_lib = "0.23"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
# for gstreamer
# libunwind = "1.3.3"
libffi = "3.2.0"
android_logger = "0.13.1"
jni = { version = "0.5", default-features = false }
# gst = { version = "0.21.2", package = "gstreamer", default-features = false }
log = { version = "0.4.18", default-features = false }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
gst = { version = "0.21.2", package = "gstreamer", default-features = false }
# gst-gl = { package = "gstreamer-gl",  optional = true }
# gst-gl-egl = { package = "gstreamer-gl-egl", optional = true }
# gst-gl-x11 = { package = "gstreamer-gl-x11", optional = true }
# gst-app = { package = "gstreamer-app" }
# gst-audio = { package = "gstreamer-audio"}
# gst-base = { package = "gstreamer-base" }
# gst-video = { package = "gstreamer-video" }
# gst-pbutils = { package = "gstreamer-pbutils"}
# gst-play = { package = "gstreamer-play",  optional = true }
# gst-player = { package = "gstreamer-player", optional = true }
# ges = { package = "gstreamer-editing-services", optional = true }
# gst-sdp = { package = "gstreamer-sdp", optional = true }
# gst-rtsp = { package = "gstreamer-rtsp", optional = true }
# gst-rtsp-server = { package = "gstreamer-rtsp-server", optional = true }
# gst-allocators = { package = "gstreamer-allocators", optional = true }
# gio = { git = "https://github.com/gtk-rs/gtk-rs-core", optional = true }


[build]
# rustflags = ["-lffi", "-C", "link-args=-lunwind"]

[lib]
name="main"
crate_type=["cdylib"]

[package.metadata.android]
package = "com.myapp"
apk_name = "myapp"

[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"
# max_sdk_version = 18
# The target Android API level.
target_sdk_version = 30
min_sdk_version = 21

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.application]
label = "MyApp"

build_targets = [ "aarch64-linux-android" ]

# See: https://developer.android.com/guide/topics/manifest/activity-element#screen
orientation = "portrait"

runtime_libs = "app/src/main/jniLibs"

