[package]
name = "gst-plugin-fallbackswitch"
version = "0.12.0-alpha.1"
authors = ["Sebastian Dröge <sebastian@centricular.com>", "Jan Schmidt <jan@centricular.com>"]
#repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
license = "MPL-2.0"
edition = "2021"
rust-version = "1.70"
description = "GStreamer Fallback Switcher and Source Plugin"

[dependencies]
#gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
#gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
#gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
#gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
#gst-plugin-gtk4 = { path = "../../video/gtk4", optional = true }
#gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs", optional = true }
#gio = { git = "https://github.com/gtk-rs/gtk-rs-core", optional = true }
parking_lot = "0.12"

#[dev-dependencies]
#gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
#gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }

[lib]
name = "gstfallbackswitch"
#crate-type = ["rlib"]

# crate-type = ["cdylib", "rlib"]
path = "mod.rs"

#[[example]]
#name = "gtk-fallbackswitch"
#path = "examples/gtk_fallbackswitch.rs"
#required-features = ["gtk", "gio", "gst-plugin-gtk4"]


#[build-dependencies]
#gst-plugin-version-helper = { path="../../version-helper" }
#
#[features]
#default = ["v1_20"]
#static = []
#capi = []
#doc = ["gst/v1_18"]
#v1_20 = ["gst/v1_20"]

#[lib]
#name="auteur_controlling"
#path="mod.rs"